(lang dune 3.16)

(name grew_web_dream)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Bruno Guillaume")

(maintainers "Bruno Guillaume")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name grew_web_dream)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
